--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "faker": "^6.6.6",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.1.0",
